--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page d'accueil</title>
+    <link rel="stylesheet" href="./assets/css/style.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+
 </head>
-<body>
-    
+
+<body class="black-haze">
+    <header class="bg-white z-50 fixed top-0 w-full shadow">
+        <nav id="main-nav" class="bg-white max-w-5xl mx-auto font-poppins p-6 flex items-center justify-between">
+            <a href="top" class="flex" aria-label="Page d'accueil du portfolio">
+                <img src="/image/logo.png" class="hidden md:w-7 md:inline md:mr-4" alt="" />
+                <span aria-hidden="true" class="text-lg lg:text-xl">
+                    French <strong>M<span class="text-rose-600">ovie</span></strong>
+                </span>
+            </a>
+            <button aria-label="toggle button" aria-expanded="false" id="menu-btn" class="cursor-pointer w-7 md:hidden">
+                <img src="/image/menu.svg" alt="">
+            </button>
+            <ul id="toggled-menu"
+                class="w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center md:static md:z-10 md:w-min md:transform-none md:border-none md:flex-row">
+                <li class="py-4 md:py-0 md:mr-6">
+                    <a href="index.html" class="text-sm uppercase font-semibold w-full hover:text-rose-600">Accueil
+                    </a>
+                </li>
+                <li class="py-4 md:py-0 md:mr-6">
+                    <a href="#dashboard" class="text-sm uppercase font-semibold w-full hover:text-rose-600">Dashboard
+                    </a>
+                </li>
+                <li class="py-4 md:py-0 md:mr-6">
+                    <a href="#contact" class="text-sm uppercase font-semibold w-full hover:text-rose-600">Contact
+                    </a>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
