--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="black-haze">
+<body>
     <header class="bg-white z-50 fixed top-0 w-full shadow">
         <nav id="main-nav" class="bg-white max-w-5xl mx-auto font-poppins p-6 flex items-center justify-between">
             <a href="top" class="flex" aria-label="Page d'accueil du portfolio">
@@ -20,7 +20,7 @@
                 </span>
             </a>
             <button aria-label="toggle button" aria-expanded="false" id="menu-btn" class="cursor-pointer w-7 md:hidden">
-                <img src="/image/menu.svg" alt="">
+                <img src="image/menu.svg" alt="">
             </button>
             <ul id="toggled-menu"
                 class="w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center md:static md:z-10 md:w-min md:transform-none md:border-none md:flex-row">
@@ -40,6 +40,9 @@
             </ul>
         </nav>
     </header>
+
+
+    <script src="script/script.js"></script>
 </body>
 
 </html>
