--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <header class="bg-white z-50 fixed top-0 w-full shadow">
         <nav id="main-nav" class="bg-white max-w-5xl mx-auto font-poppins p-6 flex items-center justify-between">
             <a href="top" class="flex" aria-label="Page d'accueil du portfolio">
-                <img src="/image/logo.png" class="hidden md:w-7 md:inline md:mr-4" alt="" />
+                <img src="assets/image/logo.png" class="hidden md:w-7 md:inline md:mr-4" alt="" />
                 <span aria-hidden="true" class="text-lg lg:text-xl">
                     French <strong>M<span class="text-rose-600">ovie</span></strong>
                 </span>
             </a>
             <button aria-label="toggle button" aria-expanded="false" id="menu-btn" class="cursor-pointer w-7 md:hidden">
-                <img src="image/menu.svg" alt="">
+                <img src="assets/image/menu.svg" alt="">
             </button>
             <ul id="toggled-menu"
                 class="w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center md:static md:z-10 md:w-min md:transform-none md:border-none md:flex-row">
@@ -42,7 +42,7 @@
     </header>
 
 
-    <script src="script/script.js"></script>
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
