--- a/src/contact.html
+++ b/src/contact.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="py-4 md:py-0 md:mr-6">
-                    <a href="#dashboard" class="text-sm uppercase font-semibold w-full hover:text-rose-600">Dashboard
+                    <a href="dashboard.html" class="text-sm uppercase font-semibold w-full hover:text-rose-600">Dashboard
                     </a>
                 </li>
                 <li class="py-4 md:py-0 md:mr-6">
