--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="py-4 md:py-0 md:mr-6">
-                    <a href="#contact" class="text-sm uppercase font-semibold w-full hover:text-rose-600">Contact
+                    <a href="contact.html" class="text-sm uppercase font-semibold w-full hover:text-rose-600">Contact
                     </a>
                 </li>
 
